# pg_fusion

./: .gitignore  AGENTS.md  AUTHORS  Cargo.toml  README.md  regression.diffs  regression.out
.github/workflows/: ci.yaml
ai/: README.md  architecture.md  gotchas.md  invariants.md
ai/components/: arrow_layout.md  host_runtime.md  scan_sql.md  slot_encoder.md
ai/log/: 2026-01-07.md  2026-01-09.md  2026-01-10.md  2026-02-14.md  2026-02-26.md  2026-03-08.md  2026-03-11.md
ai/memory/: CODEX_MEMORY_MODEL.md  architecture.md  gotchas.md  index.md  invariants.md
bench/: df.sql  pg.sql  signal_latency.c
benches/tpch/: README.md  schema.sql
client/: Cargo.toml
client/src/: backend.rs  (+4 more)
common/: Cargo.toml
control_ipc/: Cargo.toml  README.md
control_ipc/src/: error.rs  lib.rs  ring.rs  tests.rs
control_ipc/src/region/: backend.rs  layout.rs  mod.rs  raw.rs  shared.rs  worker.rs
control_transport/: Cargo.toml  README.md
core/: Cargo.toml
core/src/: buffer.rs  data_type.rs  error.rs  fsm.rs  ipc.rs  layout.rs  lib.rs  protocol.rs  server.rs  sql.rs  stack.rs
core/src/protocol/: bind.rs  columns.rs  explain.rs  failure.rs  metadata.rs  parse.rs
executor/: Cargo.toml
executor/src/: budget.rs  buffer.rs  fsm.rs  heap.rs  ipc.rs  layout.rs  lib.rs  logging.rs  pgscan.rs  protocol.rs  server.rs  shm.rs  sql.rs  stack.rs  telemetry.rs
executor/src/scan/: mod.rs
executor/src/scan/heap/: decode.rs  mod.rs  page_iter.rs  visibility.rs
executor/tests/: heap_proto.rs
join_order/: Cargo.toml  README.md
lockfree/: Cargo.toml
page/batch_encoder/: Cargo.toml  README.md
page/batch_encoder/benches/: encode_block.rs
page/batch_encoder/src/: encoder.rs  error.rs  lib.rs  tests.rs
page/import/: Cargo.toml  README.md
page/import/src/: error.rs  lib.rs  tests.rs
page/issuance/: Cargo.toml  README.md
page/issuance/src/: codec.rs  error.rs  lib.rs  pool.rs  rx.rs  tests.rs  tx.rs  wire.rs
page/plan_codec/: Cargo.toml  README.md
page/plan_codec/src/: fsm.rs  lib.rs  tests.rs
page/plan_flow/: Cargo.toml  README.md
page/plan_flow/src/: backend.rs  error.rs  fsm.rs  lib.rs  tests.rs  types.rs  worker.rs
page/pool/: Cargo.toml  README.md
page/pool/src/: lib.rs  pool.rs  types.rs
page/pool/src/tests/: basic.rs  exhaustion.rs  ownership.rs  unix.rs
page/row_encoder/: Cargo.toml  README.md
page/row_encoder/benches/: q05_encode.rs
page/row_encoder/src/: encoder.rs  error.rs  lib.rs  tests.rs
page/row_estimator/: Cargo.toml  README.md
page/row_estimator/src/: lib.rs  tests.rs
page/scan_flow/: Cargo.toml  README.md
page/scan_flow/src/: backend.rs  error.rs  fsm.rs  lib.rs  tests.rs  types.rs  worker.rs
page/transfer/: Cargo.toml  README.md
page/transfer/src/: codec.rs  error.rs  lib.rs  page.rs  rx.rs  tx.rs  wire.rs
page/transfer/src/tests/: codec.rs  mod.rs  tx_rx.rs  unix.rs
page_arrow/: Cargo.toml  README.md
page_arrow/src/: error.rs  lib.rs  tests.rs
page_arrow_layout/: Cargo.toml  README.md
page_pool/: Cargo.toml  README.md
page_transfer/: Cargo.toml  README.md
page_transfer/src/: error.rs  lib.rs  rx.rs  tx.rs  wire.rs
page_transfer/src/tests/: codec.rs  mod.rs  tx_rx.rs  unix.rs
pg/host_extension/: Cargo.toml  README.md  pg_fusion_host.control
pg/host_extension/src/: custom_scan.rs  diag.rs  guc.rs  lib.rs  logging.rs  planner.rs  result_ingress.rs  result_ingress_tests.rs  shmem.rs  smoke_tests.rs  utility_hook.rs  worker.rs
pg/row_estimator_seed/: Cargo.toml  README.md
pg/row_estimator_seed/src/: lib.rs
pg/scan_node/: Cargo.toml  README.md
pg/scan_node/src/: cte.rs  lib.rs  page_materialize.rs
pg/scan_sql/: Cargo.toml  README.md
pg/scan_sql/src/: compile.rs  error.rs  identifier.rs  lib.rs  literal.rs  quote.rs  render.rs  tests.rs  types.rs
pg/slot_encoder/: Cargo.toml  README.md
pg/slot_encoder/src/: bitmap.rs  datum.rs  encoder.rs  error.rs  lib.rs  tests.rs
pg/statistics/: Cargo.toml  README.md
pg/statistics/src/: lib.rs
pg_slot_arrow/: Cargo.toml  README.md
pg_slot_arrow/src/: datum.rs  encoder.rs  error.rs  lib.rs  tests.rs
postgres/: Cargo.toml  pg_fusion.control
postgres/regress/expected/: test_setup.out
postgres/regress/sql/: test_setup.sql
postgres/src/: backend.rs  data_type.rs  error.rs  ipc.rs  lib.rs  planner_hook.rs  protocol.rs  utility_hook.rs  worker.rs
protocol/: Cargo.toml
results/: backend_served_us.txt  backend_served_us_run2.txt  backend_timeout_breakdown.txt  backend_timeout_breakdown_run2.txt  current_run_id.txt  decoded_elapsed_us.txt  probe_summary_2026-02-28.txt  profile_scan.sql  profile_scan_direct.sql  profile_scan_run.sql  profile_small_run.sql  remaining_budget_breakdown_run2.txt  run2_timing_summary.txt  signal_latency.txt  test_setup.out  worker_batch_hist.txt  worker_budget_breakdown.txt  worker_budget_breakdown_run2.txt  worker_frontend_phase_costs_run2.txt  worker_meta_to_decode.txt  worker_meta_to_decode_run2.txt  worker_query_phase_run1.txt  worker_query_phase_run2.txt
runtime_filter/: Cargo.toml  README.md
runtime_metrics/: Cargo.toml  README.md
runtime_protocol/: Cargo.toml  README.md
scan/: Cargo.toml
scan/benches/: heap_decode.rs
scan/src/: lib.rs
scan/src/heap/: decode.rs  mod.rs
server/: Cargo.toml
src/: backend.rs  data.rs  data_type.rs  error.rs  fsm.rs  ipc.rs  lib.rs  node.rs  planner_hook.rs  protocol.rs  scan.rs  sql.rs  worker.rs
storage/: Cargo.toml
storage/benches/: memcpy.rs
storage/pg_test/: Cargo.toml  README.md  pg_test.control
storage/pg_test/src/: lib.rs  page_arrow_pipeline.rs  slot_deform_bench.rs
storage/src/: heap.rs  lib.rs
testing/pg_test/: Cargo.toml  README.md
testing/pg_test/src/: backend_service.rs  lib.rs  page_arrow_pipeline.rs  plan_builder.rs  plan_codec.rs  row_estimator_seed.rs  slot_deform_bench.rs  slot_import.rs  slot_scan.rs
worker_runtime/: Cargo.toml  README.md
worker_runtime/src/: error.rs  lib.rs  result_pages.rs  runtime.rs  runtime_filter_plan.rs  scan_exec.rs  scan_flow_driver.rs  transport_scan_source.rs
worker_runtime/tests/: transport_scan_source.rs
(+197 files in other folders)
