[workspace]
members = [
  "executor",
  "postgres",
  "protocol",
  "common",
  "storage",
  "storage/pg_test",
]
resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace.dependencies]
pgrx-pg-sys = "0.16"
pgrx = "0.16"
pgrx-tests = "0.16"
datafusion-common = "44.0"
datafusion = "44.0"
datafusion-sql = "44.0"
