[workspace]
members = [
  "lockfree",
  "page/pool",
  "page/transfer",
  "page/arrow_layout",
  "page/batch_encoder",
  "page/import",
  "page/issuance",
  "page/row_estimator",
  "page/plan_codec",
  "page/plan_flow",
  "page/scan_flow",
  "pg/df_catalog",
  "pg/plan_builder",
  "pg/scan_node",
  "pg/scan_sql",
  "pg/slot_scan",
  "pg/slot_encoder",
  "pg/slot_import",
  "executor",
  "scan",
  "pg/extension",
  "protocol",
  "common",
  "storage",
  "testing/pg_test",
]
resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace.dependencies]
pgrx-pg-sys = "0.16"
pgrx = "0.16"
pgrx-tests = "0.16"
arrow-array = "53.4.1"
arrow-buffer = "53.4.1"
arrow-ipc = "53.4.1"
arrow-schema = "53.4.1"
datafusion-common = "44.0"
datafusion = "44.0"
datafusion-expr = "44.0"
datafusion-sql = "44.0"
datafusion-catalog = "44.0"
datafusion-physical-expr = "44.0"
datafusion-execution = "44.0"
