[package]
name = "core"
version = "25.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
ahash = "0.8"
anyhow = "1.0"
datafusion = "44.0"
datafusion-sql = "44.0"
fasthash = "0.4"
futures = "0.3"
libc = "0.2"
once_cell = "1.21"
rmp = "0.8"
rust-fsm = { version = "0.7", features = ["diagram"] }
smallvec = { version = "1.14", features = ["const_generics", "union"] }
smol_str = "0.3"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
