[package]
name = "page_arrow"
version = "25.0.0"
edition = "2021"
description = "Zero-copy Arrow RecordBatch import from page_transfer pages"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
page_arrow_layout = { path = "../page_arrow_layout", version = "25.0" }
page_transfer = { path = "../page_transfer", version = "25.0" }
thiserror = "2.0"

[dev-dependencies]
page_pool = { path = "../page_pool", version = "25.0" }
pg_slot_arrow = { path = "../pg_slot_arrow", version = "25.0" }
pgrx-pg-sys = { workspace = true }
