[package]
name = "pg_slot_arrow"
version = "25.0.0"
edition = "2021"
description = "Direct page_arrow_layout writer for PostgreSQL TupleTableSlot rows"
readme = "README.md"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["pgrx-pg-sys/pg17"]

[dependencies]
page_arrow_layout = { path = "../page_arrow_layout", version = "25.0" }
pgrx-pg-sys = { workspace = true }
thiserror = "2.0"
