[package]
name = "pg_fusion"
version = "24.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_fusion"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
ahash = "0.8"
anyhow = "1.0"
datafusion = "44.0"
datafusion-sql = "44.0"
executor = { path = "../executor", version = "25.0" }
fasthash = "0.4"
libc = "0.2"
once_cell = "1.21"
pgrx = "0.12"
rmp = "0.8"
rust-fsm = { version = "0.7", features = ["diagram"] }
smallvec = { version = "1.14", features = ["const_generics", "union"] }
smol_str = "0.3"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "time",
] }
tracing-appender = "0.2"
protocol = { path = "../protocol", version = "25.0" }
common = { path = "../common", version = "25.0" }

[dev-dependencies]
pgrx-tests = "0.12"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
