[package]
name = "scan"
version = "25.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
async-trait = "0.1"
datafusion = { workspace = true }
datafusion-catalog = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-physical-expr = { workspace = true }
futures = "0.3"
tokio = { version = "1.42", features = ["full"] }
tracing = { version = "0.1" }
pgrx-pg-sys = { workspace = true }
storage = { path = "../storage", version = "25.0" }
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "heap_decode"
harness = false
