[package]
name = "storage"
version = "25.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["pgrx-pg-sys/pg17"]

[dependencies]
anyhow = "1.0"
common = { path = "../common", version = "25.0" }
pgrx-pg-sys = "0.12"
smol_str = "0.3"
datafusion-common = "44.0"
protocol = { path = "../protocol", version = "25.0" }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(feature = "pg_test")'.dev-dependencies]
pgrx = "0.12"
pgrx-tests = "0.12"

[[bench]]
name = "memcpy"
harness = false
