[package]
name = "storage"
version = "25.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]
doctest = false

[features]
default = ["pg17"]
pg17 = ["pgrx-pg-sys/pg17"]

[dependencies]
anyhow = "1.0"
common = { path = "../common", version = "25.0" }
pgrx-pg-sys = { workspace = true }
smol_str = "0.3"
datafusion-common = { workspace = true }
protocol = { path = "../protocol", version = "25.0" }

[dev-dependencies]
criterion = "0.5"
pgrx = { workspace = true }
pgrx-tests = { workspace = true }

[[bench]]
name = "memcpy"
harness = false
