[package]
name = "pg_fusion_host"
version = "24.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_fusion_host"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
arrow-schema = { workspace = true }
backend_service = { path = "../backend_service", version = "25.0" }
control_transport = { path = "../../control_transport", version = "25.0" }
datafusion = { workspace = true }
datafusion-common = "44.0"
datafusion-execution = "44.0"
futures = "0.3"
import = { path = "../../page/import", version = "25.0" }
issuance = { path = "../../page/issuance", version = "25.0" }
plan_flow = { path = "../../page/plan_flow", version = "25.0" }
plan_builder = { path = "../plan_builder", version = "25.0" }
pool = { path = "../../page/pool", version = "25.0" }
row_estimator = { path = "../../page/row_estimator", version = "25.0" }
pgrx = { workspace = true }
runtime_protocol = { path = "../../runtime_protocol", version = "25.0" }
slot_import = { path = "../slot_import", version = "25.0" }
thiserror = "2.0"
transfer = { path = "../../page/transfer", version = "25.0" }
worker_runtime = { path = "../../worker_runtime", version = "25.0" }

[dev-dependencies]
pgrx-tests = { workspace = true }
