[package]
name = "pg_test"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_test"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0"
pgrx = { workspace = true }
storage = { path = "..", version = "25.0" }
datafusion-common = { workspace = true }
protocol = { path = "../../protocol", version = "25.0" }

[dev-dependencies]
pgrx-tests = { workspace = true }
