[package]
name = "pg_test"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_test"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0"
pgrx = { workspace = true }
storage = { path = "../../storage", version = "25.0" }
datafusion-common = { workspace = true }
protocol = { path = "../../protocol", version = "25.0" }
pool = { path = "../../page/pool", version = "25.0" }
transfer = { path = "../../page/transfer", version = "25.0" }
layout = { path = "../../page/layout", version = "25.0" }
import = { path = "../../page/import", version = "25.0" }
slot_encoder = { path = "../../pg/slot_encoder", version = "25.0" }
scan_sql = { path = "../../pg/scan_sql", version = "25.0" }
slot_scan = { path = "../../pg/slot_scan", version = "25.0" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
pgrx-tests = { workspace = true }
