[package]
name = "pg_test"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_test"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0"
bytes = "1"
pgrx = { workspace = true }
storage = { path = "../../storage", version = "25.0" }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
df_catalog = { path = "../../pg/df_catalog", version = "25.0" }
plan_codec = { path = "../../page/plan_codec", version = "25.0" }
plan_builder = { path = "../../pg/plan_builder", version = "25.0" }
scan_node = { path = "../../pg/scan_node", version = "25.0" }
protocol = { path = "../../protocol", version = "25.0" }
pool = { path = "../../page/pool", version = "25.0" }
transfer = { path = "../../page/transfer", version = "25.0" }
arrow_layout = { path = "../../page/arrow_layout", version = "25.0" }
import = { path = "../../page/import", version = "25.0" }
issuance = { path = "../../page/issuance", version = "25.0" }
backend_service = { path = "../../pg/backend_service", version = "25.0" }
plan_flow = { path = "../../page/plan_flow", version = "25.0" }
runtime_protocol = { path = "../../runtime_protocol", version = "25.0" }
slot_encoder = { path = "../../pg/slot_encoder", version = "25.0" }
slot_import = { path = "../../pg/slot_import", version = "25.0" }
scan_sql = { path = "../../pg/scan_sql", version = "25.0" }
slot_scan = { path = "../../pg/slot_scan", version = "25.0" }
row_estimator = { path = "../../page/row_estimator", version = "25.0" }
row_estimator_seed = { path = "../../pg/row_estimator_seed", version = "25.0" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
pgrx-tests = { workspace = true }
